--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 								<h1>I'm <strong>Angela Sugarek</strong>.</h1>
 							</header>
 							<hr>
-							<h2><strong>About Me</strong><h2>
+							<h2><strong>About Me</strong></h2>
 							<br>	
 							<p>I currently work as a technical product analyst supporting the development of tools and scheme for Google Shopping.  In this position, much of my analysis work centers around matching quarry data with offers within the mercent space using proprietary coding language and tools.
 							<br>In my former life, I served as an educational leader in urban schools in Texas and Pennsyvania.  Like many educators, the experience of navigating the effects of the pandemic led me to reevaluate my career path. Since utializing and managing data were at the center of my success as a teacher and school leader, it made perfect sense for me to transition into data science.
