--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
 							<hr>
 							<h2><strong>About Me</strong></h2>
 							<br>	
-							<p>I currently work as a technical product analyst supporting the development of tools and scheme for Google Shopping.  In this position, much of my analysis work centers around matching quarry data with offers within the mercent space using proprietary coding language and tools.
+							<p>I currently work as a technical product analyst supporting the development of tools and scheme for Google Shopping.  In this position, much of my analysis 
+							<div class="col-4 col-5-large col-12-medium"><br>work centers around matching quarry data with offers within the mercent space using proprietary coding language and tools.
 							<br>In my former life, I served as an educational leader in urban schools in Texas and Pennsyvania.  Like many educators, the experience of navigating the effects of the pandemic led me to reevaluate my career path. Since utializing and managing data were at the center of my success as a teacher and school leader, it made perfect sense for me to transition into data science.
 							<br>In August 2022, I will complete a master’s degree in data science.  This is in addition to a bachelor’s degree is in mathematics and a masters degree in educational leadership.
 							<br>In a world where many specialize, I am a utility player.  I am equally comfortable cleanning, anaylyzing and visualzing data in R and Python.  I think in spreadsheets and am well-versed in SQL.  I can create dashboards in Power BI and Tableau.  No matter the tool or language or software, my focus is on using data to inform decisions and improve outcomes.</p>
