--- a/index.html
+++ b/index.html
@@ -29,20 +29,24 @@
 						<div class="col-8 col-7-large col-12-medium">
 							<header>
 								<h1>Hello.<br>
-								<h1>I'm <strong>Angela Sugarek</strong>.</h1>
-							</header>
-							<hr>
-							<h2><strong>About Me</strong></h2>
-							<br>	
-							<p>I currently work as a technical product analyst supporting the development of tools and scheme for Google Shopping.  In this position, much of my analysis 
-							<div class="col-4 col-5-large col-12-medium"><br>work centers around matching quarry data with offers within the mercent space using proprietary coding language and tools.
-							<br>In my former life, I served as an educational leader in urban schools in Texas and Pennsyvania.  Like many educators, the experience of navigating the effects of the pandemic led me to reevaluate my career path. Since utializing and managing data were at the center of my success as a teacher and school leader, it made perfect sense for me to transition into data science.
-							<br>In August 2022, I will complete a master’s degree in data science.  This is in addition to a bachelor’s degree is in mathematics and a masters degree in educational leadership.
-							<br>In a world where many specialize, I am a utility player.  I am equally comfortable cleanning, anaylyzing and visualzing data in R and Python.  I think in spreadsheets and am well-versed in SQL.  I can create dashboards in Power BI and Tableau.  No matter the tool or language or software, my focus is on using data to inform decisions and improve outcomes.</p>
+									<h1>I'm <strong>Angela Sugarek</strong>.</h1>
+								</header>
+								<hr>
 						</div>
-					</div>
-				</div>
-			</article>
+
+	<!--About Me-->
+		<article id="about me" class="wrapper style2">
+			<div class = "container">
+				<header>
+					<h1 style = "text-align:left;">"About Me"</h1>
+				</header>
+				<br>
+				<p style="text-align:left;">"I currently work as a technical product analyst supporting the development of tools and scheme for Google Shopping.  In this position, much of my analysis work centers around matching quarry data with offers within the mercent space using proprietary coding language and tools.
+					In my former life, I served as an educational leader in urban schools in Texas and Pennsyvania.  Like many educators, the experience of navigating the effects of the pandemic led me to reevaluate my career path. Since utializing and managing data were at the center of my success as a teacher and school leader, it made perfect sense for me to transition into data science.
+					In August 2022, I will complete a master’s degree in data science.  This is in addition to a bachelor’s degree is in mathematics and a masters degree in educational leadership.
+					In a world where many specialize, I am a utility player.  I am equally comfortable cleanning, anaylyzing and visualzing data in R and Python.  I think in spreadsheets and am well-versed in SQL.  I can create dashboards in Power BI and Tableau.  No matter the tool or language or software, my focus is on using data to inform decisions and improve outcomes."</p>
+			</div>
+		</article>
 
 		<!-- Portfolio -->
 			<article id="portfolio" class="wrapper style3">
@@ -68,6 +72,8 @@
 								<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
 								<h3><a href="https://github.com/asugarek/SQL_files">SQL Projects</a></h3>
 							</article>
+						<div class="col-4 col-6-medium col-12-small">
+						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
 								<a href="#" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
