--- a/index.html
+++ b/index.html
@@ -32,65 +32,64 @@
 									<h1>I'm <strong>Angela Sugarek</strong>.</h1>
 								</header>
 								<hr>
+								<br>
+								<br>
 						</div>
 
 	<!--About Me-->
-		<br><br><br><br><br><br><br>
+		<br><br><br><br>
 				<header>
-					<h1 style = "text-align:left;">"About Me"</h1>
+					<h1 style = "text-align:left;">About Me</h1>
 				</header>
-				<p style="text-align:left;">I currently work as a technical product analyst supporting the development of tools and scheme for Google Shopping.  In this position, much of my analysis work centers around matching quarry data with offers within the mercent space using proprietary coding language and tools.</p>
-				<p>In my former life, I served as an educational leader in urban schools in Texas and Pennsyvania.  Like many educators, the experience of navigating the effects of the pandemic led me to reevaluate my career path. Since utializing and managing data were at the center of my success as a teacher and school leader, it made perfect sense for me to transition into data science.</p>
-				<p>In August 2022, I will complete a master’s degree in data science.  This is in addition to a bachelor’s degree is in mathematics and a masters degree in educational leadership.</p>
-				<p>In a world where many specialize, I am a utility player.  I am equally comfortable cleanning, anaylyzing and visualzing data in R and Python.  I think in spreadsheets and am well-versed in SQL.  I can create dashboards in Power BI and Tableau.  No matter the tool or language or software, my focus is on using data to inform decisions and improve outcomes.</p>
+				<p style="text-align:left;">I currently work as a technical product analyst supporting the development of tools and scheme for Google Shopping.  In this position, much of my analysis work centers around matching quarry data with offers within the mercent space using proprietary coding language and tools.
+				<br>In my former life, I served as an educational leader in urban schools in Texas and Pennsyvania.  Like many educators, the experience of navigating the effects of the pandemic led me to reevaluate my career path. Since utializing and managing data were at the center of my success as a teacher and school leader, it made perfect sense for me to transition into data science.
+				<br>In August 2022, I will complete a master’s degree in data science.  This is in addition to a bachelor’s degree is in mathematics and a masters degree in educational leadership.
+				<br>In a world where many specialize, I am a utility player.  I am equally comfortable cleanning, anaylyzing and visualzing data in R and Python.  I think in spreadsheets and am well-versed in SQL.  I can create dashboards in Power BI and Tableau.  No matter the tool or language or software, my focus is on using data to inform decisions and improve outcomes.</p>
 
-
-
-		<!-- Portfolio -->
-			<article id="portfolio" class="wrapper style3">
-				<div class="container">
-					<header>
-						<h2>Check out some of my work.</h2>
-					</header>
-					<div class="row">
-						<div class="col-4 col-6-medium col-12-small">
-							<article class="box style2">
-								<a href="https://github.com/asugarek/python" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
-								<h3><a href="https://github.com/asugarek/python">Python Projects</a></h3>
-							</article>
-						</div>
-						<div class="col-4 col-6-medium col-12-small">
-							<article class="box style2">
-								<a href="https://github.com/asugarek/R_files" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
-								<h3><a href="https://github.com/asugarek/R_files">R Projects</a></h3>
-							</article>
-						</div>
-						<div class="col-4 col-6-medium col-12-small">
-							<article class="box style2">
-								<a href="https://github.com/asugarek/SQL_files" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
-								<h3><a href="https://github.com/asugarek/SQL_files">SQL Projects</a></h3>
-							</article>
-						</div>
-						<div class="col-4 col-6-medium col-12-small">
-							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
-								<h3><a href="#">My Cute Kids</a></h3>
-							</article>
-						</div>
-						<div class="col-4 col-6-medium col-12-small">
-							<article class="box style2">
-								<a href="https://github.com/asugarek/randomprojects" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
-								<h3><a href="https://github.com/asugarek/randomprojects">Other Random Projects</a></h3>
-							</article>
-						</div>
-						<div class="col-4 col-6-medium col-12-small">
-							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic06.jpg" alt="" /></a>
-								<h3><a href="#">Me and My Wife</a></h3>
-							</article>
-						</div>
-					</div>
-			</article>
+	<!-- Portfolio -->
+	<article id="portfolio" class="wrapper style3">
+		<div class="container">
+			<header>
+				<h2>Check out some of my work.</h2>
+			</header>
+			<div class="row">
+				<div class="col-4 col-6-medium col-12-small">
+					<article class="box style2">
+						<a href="https://github.com/asugarek/python" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
+						<h3><a href="https://github.com/asugarek/python">Python Files</a></h3>
+					</article>
+				</div>
+				<div class="col-4 col-6-medium col-12-small">
+					<article class="box style2">
+						<a href="https://github.com/asugarek/R_files" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
+						<h3><a href="https://github.com/asugarek/R_files">R Files</a></h3>
+					</article>
+				</div>
+				<div class="col-4 col-6-medium col-12-small">
+					<article class="box style2">
+						<a href="https://github.com/asugarek/SQL_files" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
+						<h3><a href="https://github.com/asugarek/SQL_files">SQL Files</a></h3>
+					</article>
+				</div>
+				<div class="col-4 col-6-medium col-12-small">
+					<article class="box style2">
+						<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
+						<h3><a href="#">My Adorable Boys</a></h3>
+					</article>
+				</div>
+				<div class="col-4 col-6-medium col-12-small">
+					<article class="box style2">
+						<a href="#" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
+						<h3><a href="https://github.com/asugarek/randomprojects">Random Projects</a></h3>
+					</article>
+				</div>
+				<div class="col-4 col-6-medium col-12-small">
+					<article class="box style2">
+						<a href="#" class="image featured"><img src="images/pic06.jpg" alt="" /></a>
+						<h3><a href="#">Me and My Wife</a></h3>
+					</article>
+				</div>
+			</div>
 
 		<!-- Contact -->
 			<article id="contact" class="wrapper style4">
