--- a/index.html
+++ b/index.html
@@ -29,23 +29,28 @@
 						<div class="col-8 col-7-large col-12-medium">
 							<header>
 								<h1>Hello.<br>
-									<h1>I'm <strong>Angela Sugarek</strong>.</h1>
-								</header>
-								<hr>
-								<br>
-								<br>
+								<h1>I'm <strong>Angela Sugarek</strong>.</h1>
+							</header>
 						</div>
+					</div>
+				</div>
+			</article>
 
 	<!--About Me-->
-		<br><br><br><br>
+	<article id="about me" class="wrapper style1">
+		<div class="container">
+			<div class="row">
 				<header>
 					<h1 style = "text-align:left;">About Me</h1>
 				</header>
-				<p style="text-align:left;">I currently work as a technical product analyst supporting the development of tools and scheme for Google Shopping.  In this position, much of my analysis work centers around matching quarry data with offers within the mercent space using proprietary coding language and tools.
-				<br>In my former life, I served as an educational leader in urban schools in Texas and Pennsyvania.  Like many educators, the experience of navigating the effects of the pandemic led me to reevaluate my career path. Since utializing and managing data were at the center of my success as a teacher and school leader, it made perfect sense for me to transition into data science.
-				<br>In August 2022, I will complete a master’s degree in data science.  This is in addition to a bachelor’s degree is in mathematics and a masters degree in educational leadership.
-				<br>In a world where many specialize, I am a utility player.  I am equally comfortable cleanning, anaylyzing and visualzing data in R and Python.  I think in spreadsheets and am well-versed in SQL.  I can create dashboards in Power BI and Tableau.  No matter the tool or language or software, my focus is on using data to inform decisions and improve outcomes.</p>
-
+					<p style="text-align:left;">I currently work as a technical product analyst supporting the development of tools and scheme for Google Shopping.  In this position, much of my analysis work centers around matching quarry data with offers within the mercent space using proprietary coding language and tools.
+					<br>In my former life, I served as an educational leader in urban schools in Texas and Pennsyvania.  Like many educators, the experience of navigating the effects of the pandemic led me to reevaluate my career path. Since utializing and managing data were at the center of my success as a teacher and school leader, it made perfect sense for me to transition into data science.
+					<br>In August 2022, I will complete a master’s degree in data science.  This is in addition to a bachelor’s degree is in mathematics and a masters degree in educational leadership.
+					<br>In a world where many specialize, I am a utility player.  I am equally comfortable cleanning, anaylyzing and visualzing data in R and Python.  I think in spreadsheets and am well-versed in SQL.  I can create dashboards in Power BI and Tableau.  No matter the tool or language or software, my focus is on using data to inform decisions and improve outcomes.</p>
+			</div>
+		</div>
+	</article>
+				
 	<!-- Portfolio -->
 	<article id="portfolio" class="wrapper style3">
 		<div class="container">
@@ -55,19 +60,19 @@
 			<div class="row">
 				<div class="col-4 col-6-medium col-12-small">
 					<article class="box style2">
-						<a href="https://github.com/asugarek/python" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
+						<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
 						<h3><a href="https://github.com/asugarek/python">Python Files</a></h3>
 					</article>
 				</div>
 				<div class="col-4 col-6-medium col-12-small">
 					<article class="box style2">
-						<a href="https://github.com/asugarek/R_files" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
+						<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
 						<h3><a href="https://github.com/asugarek/R_files">R Files</a></h3>
 					</article>
 				</div>
 				<div class="col-4 col-6-medium col-12-small">
 					<article class="box style2">
-						<a href="https://github.com/asugarek/SQL_files" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
+						<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
 						<h3><a href="https://github.com/asugarek/SQL_files">SQL Files</a></h3>
 					</article>
 				</div>
@@ -90,39 +95,39 @@
 					</article>
 				</div>
 			</div>
-
+		</article>
 		<!-- Contact -->
-			<article id="contact" class="wrapper style4">
-				<div class="container medium">
-					<header>
-						<h2>Contact Me</h2>
-						<p>Feel free to reach out!</p>
-					</header>
-					<div class="row">
-						<div class="col-12">
-							<form method="post" action="contact_form_collector.php">
-								<div class="row">
-									<div class="col-6 col-12-small">
-										<input type="text" name="name" id="name" placeholder="Name" />
-									</div>
-									<div class="col-6 col-12-small">
-										<input type="text" name="email" id="email" placeholder="Email" />
-									</div>
-									<div class="col-12">
-										<input type="text" name="subject" id="subject" placeholder="Subject" />
-									</div>
-									<div class="col-12">
-										<textarea name="message" id="message" placeholder="Message"></textarea>
-									</div>
-									<div class="col-12">
-										<ul class="actions">
-											<li><input type="submit" value="Send Message" /></li>
-											<li><input type="reset" value="Clear Form" class="alt" /></li>
-										</ul>
-									</div>
+		<article id="contact" class="wrapper style4">
+			<div class="container medium">
+				<header>
+					<h2>Contact Me</h2>
+					<p>Feel free to reach out!</p>
+				</header>
+				<div class="row">
+					<div class="col-12">
+						<form method="post" action="contact_form_collector.php">
+							<div class="row">
+								<div class="col-6 col-12-small">
+									<input type="text" name="name" id="name" placeholder="Name" />
 								</div>
-							</form>
-						</div>
+								<div class="col-6 col-12-small">
+									<input type="text" name="email" id="email" placeholder="Email" />
+								</div>
+								<div class="col-12">
+									<input type="text" name="subject" id="subject" placeholder="Subject" />
+								</div>
+								<div class="col-12">
+									<textarea name="message" id="message" placeholder="Message"></textarea>
+								</div>
+								<div class="col-12">
+									<ul class="actions">
+										<li><input type="submit" value="Send Message" /></li>
+										<li><input type="reset" value="Clear Form" class="alt" /></li>
+									</ul>
+								</div>
+							</div>
+						</form>
+					</div>
 						<div class="col-12">
 							<hr />
 							<h3>Find me on ...</h3>
