--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 					<br><br>In my former life, I served as an educational leader in urban schools in Texas and Pennsyvania.  Like many educators, the experience of 
 						navigating the effects of the pandemic led me to reevaluate my career path. Since utializing and managing data were at the center of 
 						my success as a teacher and school leader, it made perfect sense for me to transition into data science.
-					<br><br>In August 2022, I will complete a master’s degree in data science.  This is in addition to a bachelor’s degree is in mathematics and a 
+					<br><br>In August 2022, I will complete a master’s degree in data science.  This  degree will be in addition to a bachelor’s degree is in mathematics and a 
 						masters degree in educational leadership.
 					<br><br>In a world where many specialize, I am a utility player.  I am equally comfortable cleanning, anaylyzing and visualzing data in R and Python.  
 						I think in spreadsheets and am well-versed in SQL.  I can create dashboards in Power BI and Tableau.  No matter the tool or language or 
@@ -65,7 +65,7 @@
 			<div class="row">
 				<div class="col-4 col-6-medium col-12-small">
 					<article class="box style2">
-						<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
+						<a class="image featured"><img src="images/pic01.jpg" alt="" /></a>
 						<h3><a href="https://github.com/asugarek/python">Python Files</a></h3>
 					</article>
 				</div>
