--- a/index.html
+++ b/index.html
@@ -45,12 +45,12 @@
 					<p style="text-align:left;">I currently work as a technical product analyst supporting the development of tools and scheme for Google Shopping.  
 						In this position, much of my analysis work centers around matching query data with offers within the mercent space using proprietary 
 						coding language and tools.
-					<br style="line-height: 10px" />In my former life, I served as an educational leader in urban schools in Texas and Pennsyvania.  Like many educators, the experience of 
+					<br style="line-height: 16px" />In my former life, I served as an educational leader in urban schools in Texas and Pennsyvania.  Like many educators, the experience of 
 						navigating the effects of the pandemic led me to reevaluate my career path. Since utializing and managing data were at the center of 
 						my success as a teacher and school leader, it made perfect sense for me to transition into data science.
-					<br style="line-height: 10px" />In August 2022, I will complete a master’s degree in data science.  This  degree will be in addition to a bachelor’s degree is in mathematics and a 
+					<br style="line-height: 16px" />In August 2022, I will complete a master’s degree in data science.  This  degree will be in addition to a bachelor’s degree is in mathematics and a 
 						master's degree in educational leadership. 
-					<br style="line-height: 10px" />In a world where many specialize, I am a utility player.  I am equally comfortable cleanning, anaylyzing and visualzing data in R and Python.  
+					<br style="line-height: 16px" />In a world where many specialize, I am a utility player.  I am equally comfortable cleanning, anaylyzing and visualzing data in R and Python.  
 						I think in spreadsheets and am well-versed in SQL.  I can create dashboards in Power BI and Tableau.  No matter the tool or language or 
 						software, my focus is on using data to inform decisions and improve outcomes.</p>
 		</div>
@@ -84,7 +84,7 @@
 				<div class="col-4 col-6-medium col-12-small">
 					<article class="box style2">
 						<a class="image featured"><img src="images/pic04.jpg" alt="" /></a>
-						<h3><a>My Adorable Boys</a></h3>
+						<h3>My Adorable Boys</h3>
 					</article>
 				</div>
 				<div class="col-4 col-6-medium col-12-small">
@@ -96,7 +96,7 @@
 				<div class="col-4 col-6-medium col-12-small">
 					<article class="box style2">
 						<a class="image featured"><img src="images/pic06.jpg" alt="" /></a>
-						<h3><a>My Wife & I</a></h3>
+						<h3>My Wife & I</h3>
 					</article>
 				</div>
 			</div>
